--- a/app/src/main/res/layout/pokemon_item_for_recycler.xml
+++ b/app/src/main/res/layout/pokemon_item_for_recycler.xml
@@ -1,42 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="120dp"
-    android:layout_height="140dp"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
     android:backgroundTint="@color/card_view_back_color"
     android:elevation="32dp"
     android:orientation="vertical"
+    android:layout_margin="8dp"
     app:cardCornerRadius="18dp">
 
     <LinearLayout
+        android:layout_gravity="center_vertical"
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/item_image_view"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="18dp"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/ic_launcher_background"
-            app:civ_border_color="@color/white"
-            app:civ_border_width="1dp" />
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="8dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:text="TextView"
             android:textColor="@color/white"
             android:textSize="24sp" />
