--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -13,6 +13,10 @@
         <action
             android:id="@+id/action_pokemonDetailsFragment_to_pokemonListFragment"
             app:destination="@id/pokemonListFragment" />
+        <argument
+            android:name="pokemonId"
+            app:argType="integer"
+            android:defaultValue="0" />
 
     </fragment>
     <fragment
