--- a/app/src/main/res/drawable/details_text_view_background.xml
+++ b/app/src/main/res/drawable/details_text_view_background.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
-            <corners android:radius="34dp">
+            <corners android:radius="8dp">
             </corners>
-            <solid android:color="@color/main_back_color" />
+            <solid android:color="@color/details_fragment_background_photo" />
 
 
         </shape>
