--- a/app/src/main/res/layout/pokemon_item_for_recycler.xml
+++ b/app/src/main/res/layout/pokemon_item_for_recycler.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/hero_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -26,7 +26,6 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:gravity="center_vertical"
-            android:text="TextView"
             android:textColor="@color/white"
             android:textSize="24sp" />
 
