--- a/app/src/main/res/layout/pokemon_list_fragment.xml
+++ b/app/src/main/res/layout/pokemon_list_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+<com.yonder.statelayout.StateLayoutView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/swiperefreshlayout"
+    android:id="@+id/currentState"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -40,31 +40,8 @@
         app:layout_constraintVertical_weight="1"
         tools:layout_editor_absoluteX="0dp" />
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:visibility="gone"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/progress_bar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/error_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/error"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:visibility="gone"
-        android:layout_marginBottom="90dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/progress_bar"
-        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+</com.yonder.statelayout.StateLayoutView>
