--- a/app/src/main/res/layout/pokemon_list_fragment.xml
+++ b/app/src/main/res/layout/pokemon_list_fragment.xml
@@ -16,13 +16,16 @@
     tools:context=".presentation.PokemonListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
         android:id="@+id/recycler_view"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_margin="8dp"
         android:background="@drawable/recycler_view_background"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
