--- a/app/src/main/res/drawable/recycler_view_background.xml
+++ b/app/src/main/res/drawable/recycler_view_background.xml
@@ -2,11 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
-            <gradient android:type="linear" android:angle="90" android:startColor="@color/recycler_view_back_start_color"
-                android:endColor="@color/recycler_view_back_end_color" />
+            <gradient android:type="linear" android:angle="90" android:startColor="#003566"
+                android:endColor="#005f73" />
             <corners android:radius="0dp" android:topLeftRadius="32dp" android:topRightRadius="32dp"/>
         </shape>
-
-
     </item>
 </selector>
