--- a/app/src/main/res/layout/pokemon_item_for_recycler.xml
+++ b/app/src/main/res/layout/pokemon_item_for_recycler.xml
@@ -1,35 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:backgroundTint="@color/card_view_back_color"
-    android:elevation="32dp"
-    android:orientation="vertical"
     android:layout_margin="8dp"
-    app:cardCornerRadius="18dp">
+    android:background="@drawable/search_view_background"
+    android:elevation="16dp"
+    android:backgroundTint="@color/white">
 
-    <LinearLayout
-        android:layout_gravity="center_vertical"
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/hero_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:gravity="center_vertical"
-            android:textColor="@color/white"
-            android:textSize="24sp" />
+   <com.google.android.material.textview.MaterialTextView
+       android:id="@+id/pokemon_name"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_gravity="start"
+       android:layout_marginStart="16dp"
+       android:layout_marginTop="16dp"
+       android:layout_marginEnd="16dp"
+       android:layout_marginBottom="16dp"
+       android:textColor="@color/details_fragment_background_photo"
+       android:textSize="22sp"
+       android:textStyle="bold" />
 
 
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+</FrameLayout>
