Details screen not working without Internet connections

--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/pokemonDetailsFragment"
         android:name="com.example.pokemon.presentation.PokemonDetailsFragment"
         android:label="pokemon_details_fragment"
-        tools:layout="@layout/pokemon_details_fragment" >
+        tools:layout="@layout/fragment_details" >
         <action
             android:id="@+id/action_pokemonDetailsFragment_to_pokemonListFragment"
             app:destination="@id/pokemonListFragment" />
@@ -22,7 +22,7 @@
         android:id="@+id/pokemonListFragment"
         android:name="com.example.pokemon.presentation.PokemonListFragment"
         android:label="pokemon_list_fragment"
-        tools:layout="@layout/pokemon_list_fragment" >
+        tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_pokemonListFragment_to_pokemonDetailsFragment"
             app:destination="@id/pokemonDetailsFragment" />
